9. Изменить программу Tracker из 2-го модуля [#10039 #561510]