@@ -7,8 +7,7 @@ import ru.job4j.tracker.input.MockInput;
 import ru.job4j.tracker.input.ValidateInput;
 import ru.job4j.tracker.output.Output;
 import ru.job4j.tracker.output.StubOutput;
-
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -21,10 +20,10 @@ class StartUITest {
                 new String[] {"0", "Item name", "1"}
         );
         Tracker tracker = new Tracker();
-        List<UserAction> actions = new ArrayList<>(List.of(
+        List<UserAction> actions = Arrays.asList(
                 new CreateAction(output),
                 new ExitAction(output)
-        ));
+        );
         new StartUI(output).init(input, tracker, actions);
         assertThat(tracker.findAll().get(0).getName()).isEqualTo("Item name");
     }
@@ -38,10 +37,10 @@ class StartUITest {
         Input input = new MockInput(
                 new String[] {"0", String.valueOf(item.getId()), replacedName, "1"}
         );
-        List<UserAction> actions = new ArrayList<>(List.of(
+        List<UserAction> actions = Arrays.asList(
                 new ReplaceAction(output),
                 new ExitAction(output)
-        ));
+        );
         new StartUI(output).init(input, tracker, actions);
         assertThat(tracker.findById(item.getId()).getName()).isEqualTo(replacedName);
     }
@@ -54,10 +53,10 @@ class StartUITest {
         Input input = new MockInput(
                 new String[] {"0", String.valueOf(item.getId()), "1"}
         );
-        List<UserAction> actions = new ArrayList<>(List.of(
+        List<UserAction> actions = Arrays.asList(
                 new DeleteAction(output),
                 new ExitAction(output)
-        ));
+        );
         new StartUI(output).init(input, tracker, actions);
         assertThat(tracker.findById(item.getId())).isNull();
     }
@@ -69,9 +68,9 @@ class StartUITest {
                 new String[]{"0"}
         );
         Tracker tracker = new Tracker();
-        List<UserAction> actions = new ArrayList<>(List.of(
+        List<UserAction> actions = Arrays.asList(
                 new ExitAction(output)
-        ));
+        );
         new StartUI(output).init(input, tracker, actions);
         assertThat(output.toString()).isEqualTo(
                 "Меню:" + System.lineSeparator()
@@ -89,10 +88,10 @@ class StartUITest {
         Input input = new MockInput(
                 new String[] {"0", String.valueOf(one.getId()), replaceName, "1"}
         );
-        List<UserAction> actions = new ArrayList<>(List.of(
+        List<UserAction> actions = Arrays.asList(
                 new ReplaceAction(output),
                 new ExitAction(output)
-        ));
+        );
         new StartUI(output).init(input, tracker, actions);
         String ln = System.lineSeparator();
         assertThat(output.toString()).isEqualTo(
@@ -116,10 +115,10 @@ class StartUITest {
         Input input = new MockInput(
                 new String[] {"0", "1"}
         );
-        List<UserAction> userActions = new ArrayList<>(List.of(
+        List<UserAction> userActions = Arrays.asList(
                 new FindAllAction(output),
                 new ExitAction(output)
-        ));
+        );
         new StartUI(output).init(input, tracker, userActions);
         String ln = System.lineSeparator();
         assertThat(output.toString()).isEqualTo(
@@ -143,10 +142,10 @@ class StartUITest {
         Input input = new MockInput(
                 new String[] {"0", item.getName(), "1"}
         );
-        List<UserAction> userActions = new ArrayList<>(List.of(
+        List<UserAction> userActions = Arrays.asList(
                 new FindByNameAction(output),
                 new ExitAction(output)
-        ));
+        );
         new StartUI(output).init(input, tracker, userActions);
         String ln = System.lineSeparator();
         assertThat(output.toString()).isEqualTo(
@@ -170,10 +169,10 @@ class StartUITest {
         Input input = new MockInput(
                 new String[] {"0", String.valueOf(item.getId()), "1"}
         );
-        List<UserAction> userActions = new ArrayList<>(List.of(
+        List<UserAction> userActions = Arrays.asList(
                 new FindByIdAction(output),
                 new ExitAction(output)
-        ));
+        );
         new StartUI(output).init(input, tracker, userActions);
         String ln = System.lineSeparator();
         assertThat(output.toString()).isEqualTo(
@@ -196,9 +195,9 @@ class StartUITest {
                 new String[] {"1", "0"}
         );
         Tracker tracker = new Tracker();
-        List<UserAction> actions = new ArrayList<>(List.of(
+        List<UserAction> actions = Arrays.asList(
                 new ExitAction(output)
-        ));
+        );
         new StartUI(output).init(input, tracker, actions);
         String ln = System.lineSeparator();
         assertThat(output.toString()).isEqualTo(
